2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidToStringOnStringsTest.cs: Unit tests (Lukasz Knop, GSoC 2007)
	* AvoidUncalledPrivateCodeTest.cs: Unit tests (Nidhi Rawal, GSoC 2007)
	* AvoidUninstantiatedInternalClassesTest.cs: Unit tests (Nidhi Rawal,
	GSoC 2007)
	* DontIgnoreMethodResultTest.cs: Unit tests (Lukasz Knop, GSoC 2007)
	* UsingStringLengthInsteadOfCheckingEmptyStringTest.cs: Unit tests 
	(Nidhi Rawal, GSoC 2007)
	* Test.Rules.Performance.mdp: Update project file.

2007-09-04  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidUnusedParametersTest.cs: Added a test case for empty method.

2007-08-31  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidUnusedParametersTest.cs: New. Unit tests for
	AvoidUnusedParametersRule.

2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.

2006-09-20  Jonathan Chambers  <joncham@gmail.com>

	* Test.Rules.Performance.csproj: Make reference to nunit.framework
	not a specific version for portability.
	
2006-09-19  Sebastien Pouliot  <sebastien@ximian.com>

	* EmptyDestructorTest.cs: Fixed test case, EmptyDestructor should not
	return null (as this is an error, i.e. counter-productive).

2006-08-21  Sebastien Pouliot  <sebastien@ximian.com>

	* UseStringEmptyTest.cs: New. Unit tests for UseStringEmptyRule.
	* Test.Rules.Performance.mdp: Add new test to MonoDevelop project.

2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Performance.mdp: New. Project file for MonoDevelop.
	* EmptyDestructorTest.cs,
	  IDisposableWithDestructorWithoutSuppressFinalizeTest.cs:
		Add a property for the IntPtr to remove compiler warnings.

2006-03-01  Sebastien Pouliot  <sebastien@ximian.com>

	* EmptyDestructorTest.cs,
	  IDisposableWithDestructorWithoutSuppressFinalizeTest.cs:
		Conditions for success/failure were inverted when Gendarme 
		framework was updated.